--- a/frontend/src/PitchArtWizard/TranscribeAudio.css
+++ b/frontend/src/PitchArtWizard/TranscribeAudio.css
@@ -95,4 +95,11 @@
 
 .vert-center {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.fill-parent {
+    width: 100%;
+    height: 100%;
 }
