Fixed audio file dropdown height

--- a/frontend/src/PitchArtWizard/UploadAudio.css
+++ b/frontend/src/PitchArtWizard/UploadAudio.css
@@ -15,3 +15,10 @@
 .gender-selection {
     text-align: left;
 }
+
+/**
+ * Override materializecss styling.
+ */
+.dropdown-content {
+    max-height: 500px;
+}
