--- a/frontend/src/PitchArtWizard/TranscribeAudio.css
+++ b/frontend/src/PitchArtWizard/TranscribeAudio.css
@@ -3,14 +3,15 @@
 }
 
 .metilda-audio-analysis-layout {
-    display: flex;
-    justify-content: flex-start;
+    max-width: 1304px;
+}
+
+.metilda-audio-analysis-controls {
+
 }
 
 .metilda-audio-analysis {
-    margin-left: 16px;
-    width: 800px;
-    min-width: 800px;
+
 }
 
 .metilda-audio-analysis-image-container {
