--- a/frontend/src/PitchArtWizard/UploadAudio.css
+++ b/frontend/src/PitchArtWizard/UploadAudio.css
@@ -2,7 +2,7 @@
     margin-bottom: 30px;
 }
 
-.wizard-header h3, h4 {
+.wizard-header h5 {
     position: relative;
     margin-left: 24px;
     text-align: left;
