[#39] Reduced content size, changed button alignment.

--- a/frontend/src/PitchArtWizard/TranscribeAudio.css
+++ b/frontend/src/PitchArtWizard/TranscribeAudio.css
@@ -126,3 +126,8 @@
 #metilda-audio-function-btns button {
     margin-right: 32px;
 }
+
+#metilda-pitch-art-btn-container {
+    display: flex;
+    justify-content: flex-end;
+}
