--- a/frontend/src/PitchArtWizard/PitchArtViewer/PitchArtContainer.css
+++ b/frontend/src/PitchArtWizard/PitchArtViewer/PitchArtContainer.css
@@ -1,3 +1,9 @@
-.metilda-pitch-art-container-controls {
+.metilda-pitch-art-container-control-list {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.metilda-pitch-art-container-control-list-item {
+    margin-bottom: 24px;
 }
