--- a/frontend/src/PitchArtWizard/TranscribeAudio.css
+++ b/frontend/src/PitchArtWizard/TranscribeAudio.css
@@ -84,6 +84,10 @@
     background: lightyellow !important;
 }
 
+.metilda-transcribe-letter.seperator {
+    background: lightpink !important;
+}
+
 .metilda-audio-analysis-image-loading,
 .metilda-audio-analysis-image-default {
     width: 653px;
@@ -129,7 +133,7 @@
 }
 
 #metilda-audio-function-btns button {
-    margin-right: 24px;
+    margin-right: 8px;
 }
 
 #metilda-pitch-art-btn-container {
