--- a/frontend/src/PitchArtWizard/learn/WordSyllableReview.css
+++ b/frontend/src/PitchArtWizard/learn/WordSyllableReview.css
@@ -23,3 +23,9 @@
     margin-top: 16px;
     margin-left: 16px;
 }
+
+#metilda-word-list {
+    max-height: 400px;
+    overflow: hidden;
+    overflow-y: scroll;
+}
