[#74] Added option to toggle appearance of previous pitch data.

--- a/frontend/src/PitchArtWizard/GlobalStyling.css
+++ b/frontend/src/PitchArtWizard/GlobalStyling.css
@@ -32,3 +32,14 @@
     margin-left: 24px;
     text-align: left;
 }
+
+.metilda-pitch-art-container-control-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.metilda-pitch-art-container-control-list-item {
+    margin-bottom: 24px;
+    text-align: left;
+}
