[#74] Code clean-up. Added padding around word list.

--- a/frontend/src/PitchArtWizard/learn/WordSyllableReview.css
+++ b/frontend/src/PitchArtWizard/learn/WordSyllableReview.css
@@ -36,6 +36,8 @@
 #metilda-word-list {
     margin-left: 12px;
     margin-right: 12px;
+    margin-bottom: 32px;
+    padding-right: 16px;
     height: 300px;
     max-height: 300px;
     overflow: hidden;
