--- a/frontend/src/Create/CreatePitchArt.css
+++ b/frontend/src/Create/CreatePitchArt.css
@@ -98,6 +98,7 @@
     justify-content: center;
     align-items: center;
     border: 1px solid black;
+    margin-bottom: 6px;
 }
 
 .metilda-audio-analysis-image-loading .preloader-wrapper.big {
