addressing user feedback

--- a/frontend/src/Learn/WordSyllableCategories.scss
+++ b/frontend/src/Learn/WordSyllableCategories.scss
@@ -30,3 +30,8 @@
 .syllable-selection-row {
     margin-bottom: 0;
 }
+.ViewStudentsRecordings {
+    position: fixed;
+    top: 80px;
+    right:40px
+}
