--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -40,6 +40,7 @@
 }
 
 .metilda-audio-analysis-image-col-1,
+.metilda-audio-analysis-image-col-11,
 .metilda-audio-analysis-image-col-2 {
     border: 1px solid black;
     height: 32px;
@@ -47,6 +48,14 @@
 
 .metilda-audio-analysis-image-col-1 {
     width: 12.5%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: lightgray;
+}
+
+.metilda-audio-analysis-image-col-11 {
+    width: 11.5%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -145,7 +154,7 @@
 
 .UploadFile {
     position: fixed;
-    top: 70px;
+    top: 85px;
     right:40px
 }
 
