--- a/frontend/src/Pelda/PeldaView.scss
+++ b/frontend/src/Pelda/PeldaView.scss
@@ -254,7 +254,7 @@
   top: 85px;
   right: 40px; }
 
-#drop-down-back-button .audioBackButton {
+#pelda-drop-down-back-button .audioBackButton {
   position: relative;
   left: 15px;
   top: 50px;
@@ -271,7 +271,7 @@
   letter-spacing: 0.5px;
   display: block; }
 
-#drop-down-back-button .audioBackButtonDisabled {
+#pelda-drop-down-back-button .audioBackButtonDisabled {
   position: relative;
   left: 15px;
   top: 50px;
