--- a/frontend/src/MyFiles/ImagesForMyFiles.scss
+++ b/frontend/src/MyFiles/ImagesForMyFiles.scss
@@ -23,11 +23,11 @@
   top: 70px;
   bottom: 0px;
 }
-.transition {
+.imageTransition {
   width: 100%;
   left: 0;
   overflow:auto;
-  height:90vh
+  height: inherit
 }
 
 .BackButton{
