--- a/frontend/src/Pelda/PeldaView.scss
+++ b/frontend/src/Pelda/PeldaView.scss
@@ -29,11 +29,26 @@
 
 #selection-interval p:nth-child(1) {
   float: left;
-  padding-left: 65px; }
+  padding-left: 25px; }
 
 #selection-interval p:nth-child(2) {
   float: right;
   padding-left: 150px; }
+
+#eaf-interval {
+  position: absolute;
+  margin-top: -30px;
+  display: inline;
+  letter-spacing: 0.5px;
+  font-size: 16px; }
+  
+#eaf-interval p:nth-child(1) {
+  float: left;
+  padding-left: 10px; }
+  
+#eaf-interval p:nth-child(2) {
+  float: right;
+  padding-left: 140px; }
 
 .menu {
   display: block; }
@@ -130,7 +145,7 @@
 
 #elan-annotation {
   position: relative;
-  top: 50px;
+  top: 30px;
   left: 280px;
   letter-spacing: 0.5px;
   color: black;
