--- a/frontend/src/MyFiles/EafsForMyFiles.scss
+++ b/frontend/src/MyFiles/EafsForMyFiles.scss
@@ -33,8 +33,8 @@
 .eafTransition {
     width: 100%;
     left: 0;
-    height: inherit;
-    overflow:auto;
+    height: 100%;
+    overflow: scroll
 }
   
 .BackButton{
