--- a/frontend/src/Learn/WordSyllableCategories.scss
+++ b/frontend/src/Learn/WordSyllableCategories.scss
@@ -27,6 +27,13 @@
     cursor: pointer;
 }
 
+.pitch-art-img-list-item-smaller {
+        height: 150px;
+        margin-left: -6px;
+        margin-right: 24px;
+        cursor: pointer;
+}
+
 .syllable-selection-row {
     margin-bottom: 0;
 }
