Added sharepage, its route, and it's button

--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -155,6 +155,13 @@
   right: 40px;
 }
 
+.SharePage {
+  position: fixed;
+  right: 40px;
+  width: 200px;
+  margin-top: 50px;
+  //padding: 20px;
+}
 // Target Pitch Bar and Button elements below
 
 .TargetPitchBar {
