Stop Share button

--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -162,6 +162,13 @@
   margin-top: 50px;
   //padding: 20px;
 }
+
+.StopShare {
+  position: fixed;
+  right: 40px;
+  width: 200px;
+  margin-top: 50px;
+}
 // Target Pitch Bar and Button elements below
 
 .TargetPitchBar {
