--- a/frontend/src/Create/AudioAnalysis.scss
+++ b/frontend/src/Create/AudioAnalysis.scss
@@ -1,35 +1,40 @@
 .menu-icon-top-right {
-    margin-left: 30px;
-    margin-top: -10px;
+  margin-left: 30px;
+  margin-top: -10px;
 }
 
 .menu-icon-top {
-    margin-top: -20px;
+  margin-top: -20px;
 }
 
 .menu-icon-top-left {
-    margin-right: 30px;
-    margin-top: -10px;
+  margin-right: 30px;
+  margin-top: -10px;
 }
 
 .menu-icon-bottom-left {
-    margin-right: 60px;
-    margin-top: 30px;
+  margin-right: 60px;
+  margin-top: 30px;
 }
 
 .menu-icon-bottom {
-    margin-bottom: -15px;
+  margin-bottom: -15px;
 }
 
 .menu-icon-bottom-right {
-    margin-left: 60px;
-    margin-top: 30px;
+  margin-left: 60px;
+  margin-top: 30px;
 }
 
 .avg-ellipsis {
-    margin-bottom: -10px;
-    margin-top: -30px;
+  margin-bottom: -10px;
+  margin-top: -30px;
 }
 
 .AudioAnalysis-speaker {
-    max-width: 380px; }
+  max-width: 380px;
+}
+
+.AudioAnalysis-speaker .metilda-audio-analysis-controls-list {
+  height: 250px;
+}
