--- a/frontend/src/Create/SpeakerControl.scss
+++ b/frontend/src/Create/SpeakerControl.scss
@@ -1,4 +1,8 @@
 .metilda-audio-analysis-controls-list-item-row-left-align button {
-    margin-right: 16px;
-    padding: 0 10px;
+  margin-right: 16px;
+  padding: 0 10px;
 }
+// .row-left-align {
+//   position: absolute;
+//   bottom: 0;
+// }
