Added Collections, Filter, Create in PG

--- a/frontend/src/pages/Collections.scss
+++ b/frontend/src/pages/Collections.scss
@@ -5,3 +5,12 @@
   font-size: small;
   color: black;
 }
+
+.collections-select-create .collections-create {
+  display: flex-box;
+}
+
+.collections-dropdown .collections-create-name {
+  width: 10%;
+  padding-bottom: 5px;
+}
