Added confirmation modal to delete collections.

--- a/frontend/src/Pages/Collections.scss
+++ b/frontend/src/Pages/Collections.scss
@@ -91,3 +91,15 @@
   width: 50%;
   margin: 4px;
 }
+
+//Delete Modal
+.collection-delete-yes-no {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+}
+
+.collection-delete-yes-no .btn {
+  width: 50%;
+  margin: 4px;
+}
