--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -148,6 +148,7 @@
 #metilda-pitch-art-btn-container {
   display: flex;
   //justify-content: flex-start;
+  justify-content: center;
   margin-bottom: 10px;
 }
 
