Open Collections on Create Page

--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -167,10 +167,10 @@
   right: 40px;
 }
 
-.SharePage {
+.page-options {
   position: fixed;
   right: 40px;
-  width: 200px;
+  min-width: 200px;
   margin-top: 50px;
   //padding: 20px;
 }
