updated alerts and messages

--- a/frontend/src/Create/CreatePitchArt.scss
+++ b/frontend/src/Create/CreatePitchArt.scss
@@ -152,13 +152,10 @@
   margin-bottom: 10px;
 }
 
-.page-create-save-collections-form {
-  display: flex;
-  flex-direction: row;
-}
 
 #collections-dropdown {
-  width: 50%;
+  width: 75%;
+  margin: auto;
 }
 
 .UploadFile {
