file sharing with view and edit permissions

--- a/frontend/src/MyFiles/MyFiles.scss
+++ b/frontend/src/MyFiles/MyFiles.scss
@@ -81,3 +81,13 @@
   top:120px;
   left:40px
 }
+.modal-btn{
+  margin: 10px;
+}
+
+.share-modal-input{
+  height: unset;
+}
+.file-folder-options{
+  margin: 10px;
+}
